test/error/JTypeTerm4.t
%typeterm type1 {
  implement { String }
}
